[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/UI/pause_overlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Final UI/pause_btn.png" type="Texture" id=8]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=11]
[ext_resource path="res://Assets/others/meat.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Text/Bahianita-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Scenes/UI/Themes/HUDfonttheme.tres" type="Theme" id=14]

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 20
script = ExtResource( 11 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 14 )

[node name="details" type="VBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -143.0
margin_bottom = 150.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/details"]
margin_right = 143.0
margin_bottom = 85.0
alignment = 1

[node name="Distance" type="Label" parent="HUD/details/HBoxContainer"]
margin_right = 143.0
margin_bottom = 85.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Distance"

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/details"]
margin_top = 89.0
margin_right = 143.0
margin_bottom = 150.0
alignment = 1

[node name="Sprite" type="Sprite" parent="HUD/details/HBoxContainer2"]
position = Vector2( -3, 31 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 12 )

[node name="Meat" type="Label" parent="HUD/details/HBoxContainer2"]
margin_left = 43.0
margin_right = 100.0
margin_bottom = 61.0
grow_horizontal = 0
grow_vertical = 0
text = "Meat"

[node name="pause_overlay" parent="." instance=ExtResource( 1 )]

[node name="PauseButton" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -124.0
margin_right = 145.0
margin_bottom = -17.0
rect_min_size = Vector2( 129, 107 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
